--- a/index.html
+++ b/index.html
@@ -13,7 +13,125 @@
 </head>
 
 <body>
+    <header class="container">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light mb-5">
+            <div class="container">
+                <a class="navbar-brand" href="#">
+                    <img src="./images/logo.png" alt="" class="d-inline-block ">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Shoes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Backpack</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Subscribe</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <!-- carousel -->
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner py-3 rounded-3" style="background-color: rgba(254, 234, 233, 1);">
+                <div class="carousel-item active ">
+                    <div class="row d-flex align-items-center">
+                        <div class="col-lg-7 ps-5">
+                            <h1>Mega LCD Tv for sports</h1>
+                            <p>This is the best tv in the world for people who just want to waste time in front of tv.
+                            </p>
+                            <h1>$1200</h1>
+                            <button type="button" class="btn btn-primary w-25">Buy Now</button>
+                        </div>
+                        <div class="col-lg-5">
+                            <img src="./images/banner-images/tv.png" class="d-block w-100" alt="...">
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="row d-flex align-items-center">
+                        <div class="col-lg-7 ps-5">
+                            <h1>Mega LCD Tv for sports</h1>
+                            <p>This is the best tv in the world for people who just want to waste time in front of tv.
+                                this is also a very funky headphone
+                            </p>
+                            <h1>$1200</h1>
+                            <button type="button" class="btn btn-primary w-25">Buy Now</button>
+                        </div>
+                        <div class="col-lg-5">
+                            <img src="./images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="row">
+                        <div class="col-lg-7 d-flex flex-column justify-content-center ps-5">
+                            <h1>Mega LCD Tv for sports</h1>
+                            <p>This is the best tv in the world for people who just want to waste time in front of tv.
+                            </p>
+                            <h1>$1200</h1>
+                            <button type="button" class="btn btn-primary w-25">Buy Now</button>
+                        </div>
+                        <div class="col-lg-5">
+                            <img src="./images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </header>
 
+    <main class="container">
+        <div class="my-5">
+            <div class="row g-5">
+                <div class="col-lg-4 col-md-6">
+                    <div class="d-flex justify-content-between align-items-center p-3 rounded-3"
+                        style="background: linear-gradient(152.07deg, #FF9C35 1.47%, #FFD019 97.17%);">
+                        <h1>Watch</h1>
+                        <img src="./images/categories/watch.png" width="69" height="91" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="d-flex justify-content-between align-items-center rounded-3 p-3"
+                        style="background: linear-gradient(180deg, #FF589B -0.01%, #FF136F 99.99%);">
+                        <h1>Bag</h1>
+                        <img src="./images/categories/bag.png" width="91" height="91" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="d-flex justify-content-between align-items-center rounded-3 p-3"
+                        style="background: linear-gradient(170.41deg, #4289FF -10.89%, #3F07F8 92.77%);">
+                        <h1>Shoes</h1>
+                        <img src="./images/categories/shoes.png" width="152" height="91" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+    <footer>
+
+    </footer>
 
     <!-- Bootstrap Script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
